SLING-2987 - DefaultLoginsHealthCheck added
git-svn-id: https://svn.apache.org/repos/asf/sling/branches/SLING-2987-healthcheck-redesign@1511793 13f79535-47bb-0310-9956-ffa450edef68

--- a/hc-core/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/hc-core/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -29,6 +29,10 @@ org.apache.sling.hc.ScriptableHealthCheck.name = Scriptable Health Check
 org.apache.sling.hc.ScriptableHealthCheck.description = Uses scripted expressions to verify multiple JMX \
   attributes or other values.
 
+org.apache.sling.hc.DefaultLoginsHealthCheck.name = Default Logins Health Check 
+org.apache.sling.hc.DefaultLoginsHealthCheck.description = Expects default logins to fail, used to verify \
+    that they are disabled on production systems
+
 mbean.name.name = MBean name
 mbean.name.description = The name of the MBean to check.
 
@@ -54,3 +58,9 @@ language.extension.name = Language extension
 language.extension.description = File extension of the language to use to evaluate the \
     expression, for example "ecma" or "groovy", asssuming the corresponding script engine \
     is available.
+    
+username.name = Username
+username.description = The username to use to test logins.
+
+password.name = Password
+password.description = The password to use to test logins.        
