--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -32,6 +32,9 @@ org.apache.sling.hc.ScriptableHealthCheck.description = Uses scripted expression
 org.apache.sling.hc.DefaultLoginsHealthCheck.name = Default Logins Health Check 
 org.apache.sling.hc.DefaultLoginsHealthCheck.description = Expects default logins to fail, used to verify \
     that they are disabled on production systems
+    
+org.apache.sling.hc.SlingRequestStatusHealthCheck.name = Sling Request Status Health Check
+org.apache.sling.hc.SlingRequestStatusHealthCheck.description = Checks the HTTP status of Sling requests.
 
 mbean.name.name = MBean name
 mbean.name.description = The name of the MBean to check.
