--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <packaging>pom</packaging>
     <version>0.0.2-SNAPSHOT</version>
 
-    <name>Sling Health Check Tool Reactor POM</name>
+    <name>Sling Health Check Reactor POM</name>
     <inceptionYear>2013</inceptionYear>
 
     <prerequisites>
@@ -26,8 +26,8 @@
     </prerequisites>
     
     <modules>
-        <module>hc-core</module>
-        <module>sling-demo</module>
+        <module>core</module>
+        <module>samples</module>
         <module>it</module>
     </modules>
 </project>
