SLING-2987 - optionally use a different (shorter) name for the MBeans that we create
git-svn-id: https://svn.apache.org/repos/asf/sling/branches/SLING-2987-healthcheck-redesign@1512243 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/core/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -45,6 +45,9 @@ attribute.name.description = The name of the MBean attribute to check.
 attribute.value.constraint.name = Attribute value constraint
 attribute.value.constraint.description = Constraint on the MBean attribute value.
 
+hc.mbean.name.name = MBean name
+hc.mbean.name.description = Name of the MBean to create for this Health Check.
+
 hc.tags.name = Health Check tags
 hc.tags.description = List of tags for this Health Check service, used to select \
     subsets of Health Check services for execution.
