--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -45,6 +45,9 @@ attribute.name.description = The name of the MBean attribute to check.
 attribute.value.constraint.name = Attribute value constraint
 attribute.value.constraint.description = Constraint on the MBean attribute value.
 
+hc.mbean.name.name = MBean name
+hc.mbean.name.description = Name of the MBean to create for this Health Check.
+
 hc.tags.name = Health Check tags
 hc.tags.description = List of tags for this Health Check service, used to select \
     subsets of Health Check services for execution.
