SLING-2987 - avoid com.sun dependency
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1512303 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/core/pom.xml
+++ b/contrib/extensions/healthcheck/core/pom.xml
@@ -148,9 +148,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.scripting.javascript</artifactId>
-            <version>2.0.12</version>
+            <groupId>rhino</groupId>
+            <artifactId>js</artifactId>
+            <version>1.6R6</version>
             <scope>test</scope>
         </dependency>
      </dependencies>
