Add new jmx provider
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1512358 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -95,8 +95,9 @@
           <module>extensions/gwt/sample</module>
           <module>extensions/gwt/servlet</module>
           <module>extensions/i18n</module>
-          <module>extensions/obr</module>
+          <module>extensions/jmxprovider</module>
           <module>extensions/mongodb</module>
+          <module>extensions/obr</module>
           <module>extensions/reqanalyzer</module>
           <module>extensions/rewriter</module>
           <module>extensions/tenant</module>
