SLING-3006 - use SlingRequestPathInfo to decompose URLs for webconsole plugin
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1512369 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/servlets/resolver/pom.xml
+++ b/bundles/servlets/resolver/pom.xml
@@ -61,6 +61,13 @@
                         <Private-Package>
                             org.apache.sling.servlets.resolver.*
                         </Private-Package>
+                        <Import-Package>
+                            !org.apache.sling.engine.impl.*,
+                            *
+                        </Import-Package>
+                        <Embed-Dependency>
+                            org.apache.sling.engine;inline="org/apache/sling/engine/impl/request/SlingRequestPathInfo*",
+                        </Embed-Dependency>                
                     </instructions>
                 </configuration>
             </plugin>
