SLING-2667 - [Tooling] create text-only console that exposes the operations performed and their results
Initial verison of a Console which logs all operations performed by the
repository.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1512502 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -181,5 +181,13 @@
                type="org.eclipse.core.resources.IResource">
          </adapter>
       </factory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.console.consoleFactories">
+      <consoleFactory
+            class="org.apache.sling.ide.eclipse.ui.internal.console.SlingConsoleFactory"
+            label="Sling Console">
+      </consoleFactory>
    </extension> 
+   
 </plugin>    
