--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,10 @@
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-simple</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit-dep</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
