--- a/contrib/extensions/healthcheck/pom.xml
+++ b/contrib/extensions/healthcheck/pom.xml
@@ -26,7 +26,7 @@
     </prerequisites>
     
     <modules>
-        <module>core</module>
+        <module>api</module>
         <module>samples</module>
         <module>healthchecks</module>
         <module>jmx</module>
