SLING-2987 - split into several bundles
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1513183 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/healthchecks/pom.xml
+++ b/contrib/extensions/healthcheck/healthchecks/pom.xml
@@ -18,7 +18,7 @@
     <packaging>bundle</packaging>
     <version>0.0.2-SNAPSHOT</version>
 
-    <name>Sling Health Check Module - Health Check Services</name>
+    <name>Sling Health Check Services</name>
     <inceptionYear>2013</inceptionYear>
     
     <description>
