--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <packaging>bundle</packaging>
     <version>0.0.2-SNAPSHOT</version>
 
-    <name>Sling Health Check Module - Webconsole</name>
+    <name>Sling Health Check Webconsole Plugin</name>
     <inceptionYear>2013</inceptionYear>
     
     <description>
