SLING-2987 - CompositeHealthCheck - execute a set of other HealthChecks selected by tags
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1513416 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/healthchecks/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/extensions/healthcheck/healthchecks/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -36,6 +36,12 @@ org.apache.sling.hc.DefaultLoginsHealthCheck.description = Expects default login
 org.apache.sling.hc.SlingRequestStatusHealthCheck.name = Sling Request Status Health Check
 org.apache.sling.hc.SlingRequestStatusHealthCheck.description = Checks the HTTP status of Sling requests.
 
+org.apache.sling.hc.CompositeHealthCheck.name = Composite Health Check 
+org.apache.sling.hc.CompositeHealthCheck.description = Executes a set of Health Checks, selected by tags. 
+
+filter.tags.name = Filter tags
+filter.tags.description = Tags used to select Health Checks.
+
 mbean.name.name = MBean name
 mbean.name.description = The name of the MBean to check.
 
