SLING-3016 - variable Oak version
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/bdelacretaz/bdelacretaz-oak-server@1514598 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <properties>
         <sling.java.version>6</sling.java.version>
+        <oak.version>0.8</oak.version>
     </properties>
 
     <build>
@@ -83,13 +84,13 @@
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>oak-jcr</artifactId>
-            <version>0.8</version>
+            <version>${oak.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>oak-core</artifactId>
-            <version>0.8</version>
+            <version>${oak.version}</version>
             <scope>provided</scope>
         </dependency>
         
