SLING-2788 use NodeStore for persistence
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/bdelacretaz/bdelacretaz-oak-server@1514720 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
                           org.apache.jackrabbit.oak.security.user;resolution:=optional,
                           *
                         </Import-Package>
+                        <Bundle-Activator>
+                            org.apache.sling.oak.server.Activator
+                        </Bundle-Activator>
                         <Private-Package>
                             org.apache.sling.oak.server.*
                         </Private-Package>
