SLING-2788 - avoid unnecessary embed
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/bdelacretaz/bdelacretaz-oak-server@1514723 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,8 @@
                         </Private-Package>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Embed-Dependency>
-                            <!-- TODO embeds should'n be needed... -->                                
-                            oak-jcr,
-                            oak-core;inline=org/apache/jackrabbit/oak/security/authentication/user/** 
+                            <!-- TODO embeds should'n be needed...missing package exports in oak-jcr -->                                
+                            oak-jcr
                         </Embed-Dependency>
                     </instructions>
                 </configuration>                
