SLING-2989 - [Tooling] integrate with vlt once available
Added a impl-vlt which contains a simple read-only implementation of the
Repository. I've verified that this runs against a stock sling launchpad
instance and made sure that it has priority over the resource impl by
giving it a higher service.ranking.

git-svn-id: https://svn.apache.org/repos/asf/sling/branches/tooling-ide-vlt@1514762 13f79535-47bb-0310-9956-ffa450edef68

--- a/tooling/ide/pom.xml
+++ b/tooling/ide/pom.xml
@@ -13,7 +13,8 @@
 		<module>api</module>
 		<module>impl-resource</module>
         <module>impl-resource-test</module>
-		<module>vlt-wrapper</module>        
+		<module>vlt-wrapper</module>                
+		<module>impl-vlt</module>
 		<module>eclipse-core</module>
 		<module>eclipse-ui</module>
 		<module>feature</module>
