Clean up maven pom - remove unused dependencies, wrong plugin instructions etc.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1515304 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/samples/pom.xml
+++ b/contrib/extensions/healthcheck/samples/pom.xml
@@ -9,8 +9,8 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>16</version>
-        <relativePath>16</relativePath>
+        <version>17</version>
+        <relativePath/>
     </parent>
 
     <groupId>org.apache.sling</groupId>
